# player_transcoder

./: .gitignore  CMakeLists.txt  main.cpp  video_reader.cpp
include/: video_debugging.h  video_reader.h
